# synapse-like

./: README.md  mapping.json  pyproject.toml  requirements.txt
.gemini/: device_manager.py
.github/workflows/: release.yml
desktop/: synapse-like.desktop
docs/: dev-setup.md  install-linux.md  release-github.md  roadmap_pro.md  troubleshooting.md
native/synapse_native/: Cargo.toml
native/synapse_native/src/: lib.rs
scripts/: build_executable.sh  build_release.sh  demo.py  gui_entry.py  install_desktop.sh  install_linux.sh  uninstall_linux.sh
src/synapse_like/adapters/: __init__.py
src/synapse_like/adapters/openrazer/: __init__.py  capabilities.py  client.py
src/synapse_like/cli/: main.py
src/synapse_like/core/: __init__.py  device_provider.py  models.py  profiles.py
src/synapse_like/daemon/: __init__.py  ipc.py  process.py
src/synapse_like/gui/: __init__.py  constants.py  device_manager.py  device_paths.py  dialogs.py  icons.py  keyboard_svg.py  mapping_io.py  mouse_svg.py  profile_service.py  remap_gui.py  remap_service.py  theme.py  utils.py
src/synapse_like/gui/widgets/: __init__.py  keyboard_svg.py  macro_editor.py  mouse_svg.py
src/synapse_like/remap/: __init__.py  actions.py  device_paths.py  macro_editor.py  mapper.py  native_loop.c  strategy.py  window_monitor.py
tests/: test_actions.py  test_mapper_resolution.py  test_mapping_io.py  test_profile_service.py  test_strategy.py
