[tool.poetry]
name = "synapse-like"
version = "0.1.0"
description = "Open-source Synapse-like for Linux using OpenRazer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "synapse_like", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
typer = "^0.9.0"
pyside6 = "^6.6.0"
pydantic = "^2.6.0"
rich = "^13.7.0"
evdev = "^1.7.1"
# Note: openrazer is usually a system package. 
# You might need to install it via your package manager or check if a PyPI wrapper exists.
# For now, we assume the system provides openrazer bindings or we will mock them.

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
synapse = "synapse_like.cli.main:app"
